# kafka-streaming

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
kafka-api-gateway/: Cargo.toml
kafka-api-gateway/src/: lib.rs  main.rs  publish_event.rs
kafka-client/: Cargo.toml
kafka-client/src/: lib.rs  utils.rs
kui/: dynamic_config.yaml
stream-processor/: bootstrap.py  config.py  main.py  pyproject.toml  utils.py
stream-processor/processing/: gold.py  silver.py  tomongo.py
webapp/: package.json
webapp/app/: globals.css  layout.tsx  page.module.css  page.tsx
webapp/app/api/mongodb/: route.ts
webapp/components/: DataTable.module.css  DataTable.tsx
webapp/hooks/: useData.ts
webapp/lib/: mongodb.ts  seededRandom.tsx
webapp/types/: index.ts
